remove "data" event
No need for that at the moment since annotations either don't have any events or are already under user's control (eg. external content).

--- a/packages/player/demo/index.html
+++ b/packages/player/demo/index.html
@@ -41,9 +41,7 @@
   <script>
     window.addEventListener('load', () => {
       VaplyPlayer.createPlayer('#vaply-demo', {
-        config: VaplyPlayer.MOCK, onData: (event) => {
-          console.log(`[acpy] data event`, event)
-        }
+        config: VaplyPlayer.MOCK
       })
     })
   </script>
