change demo page content

--- a/packages/player/demo/index.html
+++ b/packages/player/demo/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>ACPY - Demo</title>
+  <title>VAPly - Demo</title>
 
   <style>
     #vaply-demo {
@@ -28,13 +28,13 @@
 </head>
 
 <body>
-  <h2>Annotated Content PlaYer - Demo</h2>
+  <h2>Video Annotation PLaYer - Demo</h2>
 
   <div id="vaply-demo"></div>
 
   <div id="vaply-externalcontent__container">
     <div id="externalcontent-annot-1">
-      This is external content #1 (<span id="externalcontent-annot-1-close">close me</span>)
+      I'm an external content #1 (<button id="externalcontent-annot-1-close">another close</button>)
     </div>
   </div>
 
